feat(ui): add UI of the trending collection section

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -2,6 +2,9 @@
 @use './atoms/buttons/Button';
 @use './molecules/nav/Nav';
 @use './molecules/card/HighlightNFTCard';
+@use './molecules/card/CollectionCard';
 @use './organism/header/Header';
 @use './organism/section/HeroSection';
+@use './organism/section/TrendingCollectionSection';
 @use './organism/list/StatList';
+@use './organism/list/CollectionCardList';
