--- a/src/components/atoms/buttons/_Button.scss
+++ b/src/components/atoms/buttons/_Button.scss
@@ -11,4 +11,13 @@
   border-radius: 20px;
   @include text(button);
   font-weight: 600;
+
+  &--outlined {
+    border: 2px solid $color-purple-500;
+    background-color: transparent;
+
+    & svg {
+      color: $color-purple-500;
+    }
+  }
 }
