feat(ui): add UI of the discover more nft section

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -1,16 +1,21 @@
 @use './atoms/logo/Logo';
 @use './atoms/buttons/Button';
+@use './atoms/text/Heading';
+@use './atoms/text/Subhead';
 @use './molecules/nav/Nav';
 @use './molecules/card/HighlightNFTCard';
 @use './molecules/card/CollectionCard';
 @use './molecules/card/ArtistCard';
 @use './molecules/card/CategoryCard';
+@use './molecules/card/NFTCard';
 @use './organism/header/Header';
 @use './organism/section/HeroSection';
 @use './organism/section/TrendingCollectionSection';
 @use './organism/section/TopCreatorsSection';
 @use './organism/section/BrowseCategoriesSection';
+@use './organism/section/DiscoverMoreNFTSection';
 @use './organism/list/StatList';
 @use './organism/list/CollectionCardList';
 @use './organism/list/ArtistCardList';
 @use './organism/list/CategoryCardList';
+@use './organism/list/NFTCardList';
