--- a/src/components/atoms/buttons/_Button.scss
+++ b/src/components/atoms/buttons/_Button.scss
@@ -20,4 +20,12 @@
       color: $color-purple-500;
     }
   }
+  &--light {
+    color: $color-black;
+    background-color: $color-white;
+
+    & svg {
+      color: $color-purple-500;
+    }
+  }
 }
