--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -13,6 +13,7 @@ $screen-desktop: 1280px;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-gray: #858584;
+$color-gray-soft: #ccc;
 
 $color-purple-50: #f9f5ff;
 $color-purple-100: #f1e7ff;
