feat(ui): add UI of the connect wallet section

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -13,6 +13,7 @@
 @use './molecules/card/AuctionTimerCard';
 @use './molecules/card/InfoCard';
 @use './molecules/card/InfoSocialCard';
+@use './molecules/card/ConnectWalletCard';
 @use './molecules/form/SubscribeForm';
 @use './molecules/form/CreateAccountForm';
 @use './organism/header/Header';
