feat(ui): add UI of the user profile cover component

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -16,6 +16,7 @@
 @use './molecules/card/ConnectWalletCard';
 @use './molecules/form/SubscribeForm';
 @use './molecules/form/CreateAccountForm';
+@use './molecules/user/UserProfileCover';
 @use './organism/header/Header';
 @use './organism/section/HeroSection';
 @use './organism/section/TrendingCollectionSection';
