feat(ui): add UI of the artist info component

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -14,6 +14,8 @@
 @use './molecules/card/InfoCard';
 @use './molecules/card/InfoSocialCard';
 @use './molecules/card/ConnectWalletCard';
+@use './molecules/card/ArtistInfoCard';
+@use './molecules/card/InfoDetailCard';
 @use './molecules/form/SubscribeForm';
 @use './molecules/form/CreateAccountForm';
 @use './molecules/user/UserProfileCover';
