--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -16,6 +16,7 @@ html {
   background-color: $bg-primary;
   font-feature-settings: normal;
   font-variation-settings: normal;
+  scroll-behavior: smooth;
 }
 
 body {
