refactor(components): add user preview component

--- a/src/components/molecules/card/_NFTCard.scss
+++ b/src/components/molecules/card/_NFTCard.scss
@@ -18,19 +18,10 @@
     @include text(h5);
     font-weight: 600;
   }
-  &__artist {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
-  &__avatar {
-    width: 24px;
-    height: 24px;
-    border-radius: 100%;
-  }
-  &__name {
-    @include text(bodybase);
-    font-weight: 400;
+  &__user {
+    & span {
+      font-family: var(--font-space-mono);
+    }
   }
   &__footer {
     display: grid;
