--- a/src/components/molecules/card/_AuctionTimerCard.scss
+++ b/src/components/molecules/card/_AuctionTimerCard.scss
@@ -3,22 +3,23 @@
 
 .auction {
   display: grid;
-  gap: 10px;
+  gap: 30px;
   border-radius: 20px;
   background: rgba(59, 59, 59, 0.5);
   backdrop-filter: blur(5px);
   padding: 30px;
 
-  &__description {
-    @include text(caption);
-    font-weight: 400;
-    font-family: var(--font-space-mono);
-  }
-  &__footer {
+  &__header {
     display: grid;
     grid-template-columns: 1fr auto;
     gap: 10px;
     font-family: var(--font-space-mono);
+  }
+  &__description {
+    @include text(caption);
+    font-weight: 400;
+    font-family: var(--font-space-mono);
+    grid-column: -1 / 1;
   }
   &__timer {
     display: grid;
@@ -32,7 +33,7 @@
   }
 
   @media screen and (min-width: $screen-xsm2) {
-    &__footer {
+    &__header {
       grid-template-columns: 1fr auto 1fr auto 1fr;
     }
   }
