feat(ui): add UI of the more nft from this artist section

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -35,6 +35,7 @@
 @use './organism/section/NewsletterSection';
 @use './organism/section/ConnectionSection';
 @use './organism/section/NFTInfoSection';
+@use './organism/section/MoreFromArtistSection';
 @use './organism/list/StatList';
 @use './organism/list/CollectionCardList';
 @use './organism/list/ArtistCardList';
