--- a/src/components/molecules/card/_NFTCard.scss
+++ b/src/components/molecules/card/_NFTCard.scss
@@ -5,6 +5,18 @@
   border-radius: 20px;
   background: $bg-secondary;
 
+  &__image {
+    position: relative;
+    aspect-ratio: 1;
+    width: 100%;
+    max-height: 238px;
+
+    & img {
+      border-radius: 20px 20px 0px 0px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
   &__info {
     display: grid;
     gap: 25px;
@@ -45,5 +57,11 @@
   &__value {
     @extend .nft__label;
     color: $color-white;
+  }
+
+  @media screen and (min-width: $screen-sm) {
+    &__image {
+      max-height: 296px;
+    }
   }
 }
