feat(ui): add UI of the browse marketplace section

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -36,6 +36,7 @@
 @use './organism/section/ConnectionSection';
 @use './organism/section/NFTInfoSection';
 @use './organism/section/MoreFromArtistSection';
+@use './organism/section/BrowseMarketplaceSection';
 @use './organism/list/StatList';
 @use './organism/list/CollectionCardList';
 @use './organism/list/ArtistCardList';
