--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -14,6 +14,7 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-gray: #858584;
 $color-gray-soft: #ccc;
+$color-green: #00ac4f;
 
 $color-purple-50: #f9f5ff;
 $color-purple-100: #f1e7ff;
