refactor(components): change images with responsive cover components

--- a/src/components/atoms/img/_Cover.scss
+++ b/src/components/atoms/img/_Cover.scss
@@ -1,45 +1,38 @@
 @use '../../../styles/base/variables' as *;
 
 .cover {
-  position: relative;
-  height: 320px;
+  // position: relative;
+  // height: 320px;
+  object-fit: cover;
+  object-position: center;
 
-  &__img {
-    object-fit: cover;
-    object-position: center;
+  &--tablet {
+    display: none;
+  }
+  &--desktop {
+    display: none;
+  }
 
+  @media screen and (min-width: $screen-tablet) {
+    // & {
+    //   height: 420px;
+    // }
+    &--mobile {
+      display: none;
+    }
+    &--tablet {
+      display: block;
+    }
+  }
+  @media screen and (min-width: $screen-lg) {
+    // & {
+    //   height: 560px;
+    // }
     &--tablet {
       display: none;
     }
     &--desktop {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: $screen-tablet) {
-    & {
-      height: 420px;
-    }
-    &__img {
-      &--mobile {
-        display: none;
-      }
-      &--tablet {
-        display: block;
-      }
-    }
-  }
-  @media screen and (min-width: $screen-lg) {
-    & {
-      height: 560px;
-    }
-    &__img {
-      &--tablet {
-        display: none;
-      }
-      &--desktop {
-        display: block;
-      }
+      display: block;
     }
   }
 }
