--- a/src/components/organism/section/_HighlightNFTSection.scss
+++ b/src/components/organism/section/_HighlightNFTSection.scss
@@ -5,17 +5,8 @@
   background: linear-gradient(180deg, rgba(162, 89, 255, 0) 0%, $color-purple-500 100%);
   position: relative;
 
-  &__bg {
-    object-fit: cover;
-    object-position: center;
+  &__cover {
     z-index: -1;
-
-    &--tablet {
-      display: none;
-    }
-    &--desktop {
-      display: none;
-    }
   }
   &__content {
     display: grid;
@@ -36,14 +27,6 @@
   }
 
   @media screen and (min-width: $screen-tablet) {
-    &__bg {
-      &--mobile {
-        display: none;
-      }
-      &--tablet {
-        display: block;
-      }
-    }
     &__content {
       grid-template-areas:
         'artist timer'
@@ -60,14 +43,6 @@
     }
   }
   @media screen and (min-width: $screen-lg) {
-    &__bg {
-      &--tablet {
-        display: none;
-      }
-      &--desktop {
-        display: block;
-      }
-    }
     &__content {
       padding: 360px 115px 60px 115px;
     }
