--- a/src/components/molecules/card/_CollectionCard.scss
+++ b/src/components/molecules/card/_CollectionCard.scss
@@ -3,25 +3,25 @@
 
 .collection {
   display: grid;
-  gap: 15px;
+  gap: 0.9375rem; /* 15px */
 
   &__header {
     display: grid;
     place-items: center;
-    gap: 15px;
+    gap: 0.9375rem; /* 15px */
   }
   &__img {
-    border-radius: 20px;
+    border-radius: 1.25rem; /* 20px */
   }
   &__options {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    gap: 0.9375rem; /* 15px */
   }
   &__count {
     display: grid;
     place-items: center;
-    border-radius: 20px;
+    border-radius: 1.25rem; /* 20px */
     @include text(bodybase);
     font-weight: 700;
     font-family: var(--font-space-mono);
@@ -29,7 +29,7 @@
   }
   &__footer {
     display: grid;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
   &__title {
     @include text(h5);
@@ -38,11 +38,11 @@
   &__artist {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 0.75rem; /* 12px */
   }
   &__avatar {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem; /* 24px */
+    height: 1.5rem; /* 24px */
     border-radius: 100%;
   }
   &__name {
