--- a/src/components/organism/nav/_Tabs.scss
+++ b/src/components/organism/nav/_Tabs.scss
@@ -5,22 +5,22 @@
   margin: 0 auto;
 
   &__line {
-    height: 1px;
+    height: 0.0625rem; /* 1px */
     width: 100%;
     background-color: $bg-secondary;
   }
   &__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    padding: 0 30px;
+    gap: 0.625rem; /* 10px */
+    padding: 0 1.875rem; /* 0 30px */
   }
   &__item {
     flex: 1 1 0;
   }
   &__content {
     display: none;
-    padding: 40px 30px;
+    padding: 2.5rem 1.875rem; /* 40px 30px */
 
     &--active {
       display: block;
@@ -29,19 +29,19 @@
 
   @media screen and (min-width: $screen-tablet) {
     &__list {
-      gap: 30px;
-      padding: 0 72px;
+      gap: 1.875rem; /* 30px */
+      padding: 0 4.5rem; /* 0 72px */
     }
     &__content {
-      padding: 60px 72px;
+      padding: 3.75rem 4.5rem; /* 60px 72px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     &__list {
-      padding: 0 115px;
+      padding: 0 7.1875rem; /* 0 115px */
     }
     &__content {
-      padding: 60px 115px;
+      padding: 3.75rem 7.1875rem; /* 60px 115px */
     }
   }
 }
