--- a/src/components/organism/section/_TrendingCollectionSection.scss
+++ b/src/components/organism/section/_TrendingCollectionSection.scss
@@ -3,25 +3,25 @@
 
 .trending {
   display: grid;
-  gap: 40px;
-  padding: 40px 30px;
+  gap: 2.5rem; /* 40px */
+  padding: 2.5rem 1.875rem; /* 40px 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
   &__info {
     display: grid;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
 
   @media screen and (min-width: $screen-tablet) {
     & {
-      padding: 40px 72px;
+      padding: 2.5rem 4.5rem; /* 40px 72px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 80px 115px;
-      gap: 60px;
+      padding: 5rem 7.1875rem; /* 80px 115px */
+      gap: 3.75rem; /* 60px */
     }
   }
 }
