--- a/src/components/atoms/form/_Input.scss
+++ b/src/components/atoms/form/_Input.scss
@@ -5,8 +5,8 @@
   @include text(bodybase);
   font-weight: 400;
   color: $bg-primary;
-  padding: 16px 20px;
-  border-radius: 20px;
+  padding: 1rem 1.25rem; /* 16px 20px */
+  border-radius: 1.25rem; /* 20px */
   background-color: $color-white;
   width: 100%;
 
@@ -26,25 +26,25 @@
     }
   }
   &__icon--left {
-    padding: 16px 20px 16px 52px;
+    padding: 1rem 1.25rem 1rem 3.25rem; /* 16px 20px 16px 52px */
 
     & ~ svg {
       margin: auto auto auto 0;
-      inset: 0 0 0 20px;
+      inset: 0 0 0 1.25rem; /* 0 0 0 20px */
     }
   }
   &__icon--right {
-    padding: 16px 52px 16px 20px;
+    padding: 1rem 3.25rem 1rem 1.25rem; /* 16px 52px 16px 20px */
 
     & ~ svg {
       margin: auto 0 auto auto;
-      inset: 0 20px 0 0;
+      inset: 0 1.25rem 0 0; /* 0 20px 0 0 */
     }
   }
 
   &--search {
-    padding: 18px 52px 18px 20px;
-    border: 1px solid $bg-secondary;
+    padding: 1.125rem 3.25rem 1.125rem 1.25rem; /* 18px 52px 18px 20px */
+    border: 0.0625rem solid $bg-secondary; /* 1px */
     color: $color-white;
     background-color: transparent;
 
