--- a/src/components/atoms/logo/_Logo.scss
+++ b/src/components/atoms/logo/_Logo.scss
@@ -3,30 +3,30 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 9px;
+  gap: 0.5625rem; /* 9px */
 
   &--lg {
     .logo__icon {
-      width: 32px;
-      height: 32px;
+      width: 2rem; /* 32px */
+      height: 2rem; /* 32px */
     }
     .logo__text {
-      width: 199.414px;
-      height: 19.8px;
+      width: 12.4634rem; /* 199.414px */
+      height: 1.2375rem; /* 19.8px */
     }
   }
 
   @media screen and (min-width: $screen-lg) {
     & {
-      gap: 12px;
+      gap: 0.75rem; /* 12px */
     }
     &__icon {
-      width: 32px;
-      height: 32px;
+      width: 2rem; /* 32px */
+      height: 2rem; /* 32px */
     }
     &__text {
-      width: 199.414px;
-      height: 19.8px;
+      width: 12.4634rem; /* 199.414px */
+      height: 1.2375rem; /* 19.8px */
     }
   }
 }
