--- a/src/components/atoms/tags/_Tag.scss
+++ b/src/components/atoms/tags/_Tag.scss
@@ -6,7 +6,7 @@
   font-weight: 600;
   text-align: center;
   text-transform: uppercase;
-  padding: 12px 30px;
-  border-radius: 20px;
+  padding: 0.75rem 1.875rem; /* 12px 30px */
+  border-radius: 1.25rem; /* 20px */
   background: $bg-secondary;
 }
