--- a/src/components/atoms/user/_UserPreview.scss
+++ b/src/components/atoms/user/_UserPreview.scss
@@ -3,11 +3,11 @@
 .user_preview {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 0.75rem; /* 12px */
 
   &__avatar {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem; /* 24px */
+    height: 1.5rem; /* 24px */
     border-radius: 100%;
   }
   &__name {
