--- a/src/components/molecules/card/_ArtistInfoCard.scss
+++ b/src/components/molecules/card/_ArtistInfoCard.scss
@@ -3,8 +3,8 @@
 
 .artist__info {
   display: grid;
-  gap: 30px;
-  padding: 30px;
+  gap: 1.875rem; /* 30px */
+  padding: 1.875rem; /* 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
@@ -15,23 +15,23 @@
   }
   &__ctas {
     display: grid;
-    gap: 20px;
+    gap: 1.25rem; /* 20px */
   }
   &__links {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
     color: $color-gray;
 
     & svg {
-      width: 24px;
-      height: 24px;
+      width: 1.5rem; /* 24px */
+      height: 1.5rem; /* 24px */
     }
   }
 
   @media screen and (min-width: $screen-tablet) {
     & {
-      padding: 30px 72px;
+      padding: 1.875rem 4.5rem; /* 30px 72px */
     }
     &__title {
       @include text(h3);
@@ -42,7 +42,7 @@
       height: fit-content;
     }
     &__btn {
-      padding: 19px 30px;
+      padding: 1.1875rem 1.875rem; /* 19px 30px */
     }
   }
   @media screen and (min-width: $screen-lg) {
@@ -53,8 +53,8 @@
         'stats ctas'
         'detail ctas'
         'social ctas';
-      gap: 30px 100px;
-      padding: 40px 115px;
+      gap: 1.875rem 6.25rem; /* 30px 100px */
+      padding: 2.5rem 7.1875rem; /* 40px 115px */
     }
     &__title {
       @include text(h2);
@@ -64,8 +64,8 @@
     }
     &__links {
       & svg {
-        width: 32px;
-        height: 32px;
+        width: 2rem; /* 32px */
+        height: 2rem; /* 32px */
       }
     }
   }
