--- a/src/components/molecules/card/_AuctionTimerCard.scss
+++ b/src/components/molecules/card/_AuctionTimerCard.scss
@@ -3,16 +3,16 @@
 
 .auction {
   display: grid;
-  gap: 30px;
-  border-radius: 20px;
+  gap: 1.875rem; /* 30px */
+  border-radius: 1.25rem; /* 20px */
   background: rgba(59, 59, 59, 0.5);
-  backdrop-filter: blur(5px);
-  padding: 30px;
+  backdrop-filter: blur(0.3125rem); /* 5px */
+  padding: 1.875rem; /* 30px */
 
   &__header {
     display: grid;
     grid-template-columns: 1fr auto;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
     font-family: var(--font-space-mono);
   }
   &__description {
@@ -23,7 +23,7 @@
   }
   &__timer {
     display: grid;
-    gap: 5px;
+    gap: 0.3125rem; /* 5px */
     @include text(h3);
     font-weight: 700;
   }
