--- a/src/components/molecules/card/_InfoCard.scss
+++ b/src/components/molecules/card/_InfoCard.scss
@@ -3,20 +3,20 @@
 
 .info {
   display: grid;
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
   place-items: center;
-  border-radius: 20px;
+  border-radius: 1.25rem; /* 20px */
   background-color: $bg-secondary;
-  padding: 20px;
+  padding: 1.25rem; /* 20px */
 
   &__image {
-    width: 100px;
-    height: 100px;
+    width: 6.25rem; /* 100px */
+    height: 6.25rem; /* 100px */
     object-fit: contain;
   }
   &__header {
     display: grid;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
   &__title {
     @include text(bodybase);
@@ -37,12 +37,12 @@
       grid-template-columns: 1fr;
       grid-template-rows: auto 1fr;
       align-items: start;
-      padding: 10px 20px 30px 20px;
+      padding: 0.625rem 1.25rem 1.875rem 1.25rem; /* 10px 20px 30px 20px */
       height: 100%;
     }
     &__image {
-      width: 160px;
-      height: 160px;
+      width: 10rem; /* 160px */
+      height: 10rem; /* 160px */
     }
     &__header {
       text-align: center;
@@ -50,11 +50,11 @@
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 10px 30px 30px 30px;
+      padding: 0.625rem 1.875rem 1.875rem 1.875rem; /* 10px 30px 30px 30px */
     }
     &__image {
-      width: 250px;
-      height: 250px;
+      width: 15.625rem; /* 250px */
+      height: 15.625rem; /* 250px */
     }
     &__title {
       @include text(h5);
