--- a/src/components/molecules/card/_InfoSocialCard.scss
+++ b/src/components/molecules/card/_InfoSocialCard.scss
@@ -3,7 +3,7 @@
 
 .info__social {
   display: grid;
-  gap: 15px;
+  gap: 0.9375rem; /* 15px */
 
   &__title {
     @include text(bodybase);
@@ -13,7 +13,7 @@
   &__icons {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
     color: $color-gray;
   }
 }
