--- a/src/components/molecules/form/_CreateAccountForm.scss
+++ b/src/components/molecules/form/_CreateAccountForm.scss
@@ -3,12 +3,12 @@
 
 .create__form {
   display: grid;
-  gap: 30px;
-  padding: 30px 30px 40px 30px;
+  gap: 1.875rem; /* 30px */
+  padding: 1.875rem 1.875rem 2.5rem 1.875rem; /* 30px 30px 40px 30px */
 
   &__header {
     display: grid;
-    gap: 20px;
+    gap: 1.25rem; /* 20px */
   }
   &__title {
     @include text(h3);
@@ -16,27 +16,27 @@
   }
   &__inputs {
     display: grid;
-    gap: 15px;
+    gap: 0.9375rem; /* 15px */
   }
   &__btn {
-    margin-top: 15px;
+    margin-top: 0.9375rem; /* 15px */
   }
 
   @media screen and (min-width: $screen-tablet) {
     & {
-      gap: 40px;
-      padding: 80px 72px 80px 40px;
+      gap: 2.5rem; /* 40px */
+      padding: 5rem 4.5rem 5rem 2.5rem; /* 80px 72px 80px 40px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 100px 150px 100px 60px;
+      padding: 6.25rem 9.375rem 6.25rem 3.75rem; /* 100px 150px 100px 60px */
     }
     &__title {
       @include text(h2);
     }
     &__inputs {
-      max-width: 330px;
+      max-width: 20.625rem; /* 330px */
     }
   }
 }
