--- a/src/components/molecules/list/_TagList.scss
+++ b/src/components/molecules/list/_TagList.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
 
   @media screen and (min-width: $screen-lg) {
     & {
