--- a/src/components/molecules/nav/_NavFooter.scss
+++ b/src/components/molecules/nav/_NavFooter.scss
@@ -4,7 +4,7 @@
 .nav__footer {
   &__list {
     display: grid;
-    gap: 20px;
+    gap: 1.25rem; /* 20px */
   }
   &__item:nth-child(1) {
     @include text(h5);
