--- a/src/components/organism/header/_Header.scss
+++ b/src/components/organism/header/_Header.scss
@@ -3,18 +3,18 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 15px 30px;
+  padding: 0.9375rem 1.875rem; /* 15px 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
   @media screen and (min-width: $screen-tablet) {
     & {
-      padding: 15px 50px;
+      padding: 0.9375rem 3.125rem; /* 15px 50px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 20px 50px;
+      padding: 1.25rem 3.125rem; /* 20px 50px */
     }
   }
 }
