--- a/src/components/organism/list/_InfoCardList.scss
+++ b/src/components/organism/list/_InfoCardList.scss
@@ -2,12 +2,12 @@
 
 .info__list {
   display: grid;
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
 
   @media screen and (min-width: $screen-tablet) {
     & {
       grid-template-columns: repeat(3, 1fr);
-      gap: 30px;
+      gap: 1.875rem; /* 30px */
     }
   }
 }
