--- a/src/components/organism/list/_NFTCardList.scss
+++ b/src/components/organism/list/_NFTCardList.scss
@@ -2,12 +2,12 @@
 
 .nft__list {
   display: grid;
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
 
   @media screen and (min-width: $screen-sm) {
     & {
       grid-template-columns: repeat(2, 1fr);
-      gap: 30px;
+      gap: 1.875rem; /* 30px */
     }
   }
   @media screen and (min-width: $screen-lg) {
