--- a/src/components/organism/list/_RankingTableList.scss
+++ b/src/components/organism/list/_RankingTableList.scss
@@ -3,16 +3,16 @@
 
 .ranking__table {
   display: grid;
-  gap: 20px;
+  gap: 1.25rem; /* 20px */
 
   &__header {
     display: grid;
     grid-template-columns: auto 2fr 1fr;
     align-items: center;
-    gap: 10px;
-    padding: 12px 10px;
-    border-radius: 20px;
-    border: 1px solid $bg-secondary;
+    gap: 0.625rem; /* 10px */
+    padding: 0.75rem 0.625rem; /* 12px 10px */
+    border-radius: 1.25rem; /* 20px */
+    border: 0.0625rem solid $bg-secondary; /* 1px */
     @include text(caption);
     font-weight: 400;
     font-family: var(--font-space-mono);
@@ -20,8 +20,8 @@
 
     &__rank {
       @include text(bodybase);
-      width: 24px;
-      height: 22px;
+      width: 1.5rem; /* 24px */
+      height: 1.375rem; /* 22px */
       text-align: center;
     }
     &__artist {
@@ -38,9 +38,9 @@
     display: grid;
     grid-template-columns: auto 2fr 1fr;
     align-items: center;
-    gap: 10px;
-    padding: 12px 10px;
-    border-radius: 20px;
+    gap: 0.625rem; /* 10px */
+    padding: 0.75rem 0.625rem; /* 12px 10px */
+    border-radius: 1.25rem; /* 20px */
     background-color: $bg-secondary;
     @include text(caption);
     font-weight: 400;
@@ -48,8 +48,8 @@
 
     &__rank {
       color: $color-gray;
-      width: 24px;
-      height: 24px;
+      width: 1.5rem; /* 24px */
+      height: 1.5rem; /* 24px */
       display: grid;
       place-items: center;
       flex-shrink: 0;
@@ -70,8 +70,8 @@
   @media screen and (min-width: $screen-tablet) {
     &__header {
       grid-template-columns: auto 3fr 1fr 1fr;
-      gap: 20px;
-      padding: 12px 20px;
+      gap: 1.25rem; /* 20px */
+      padding: 0.75rem 1.25rem; /* 12px 20px */
       @include text(bodybase);
 
       &__change {
@@ -80,8 +80,8 @@
     }
     &__item {
       grid-template-columns: auto 3fr 1fr 1fr;
-      gap: 20px;
-      padding: 12px 20px;
+      gap: 1.25rem; /* 20px */
+      padding: 0.75rem 1.25rem; /* 12px 20px */
       @include text(bodybase);
 
       &__change {
@@ -100,7 +100,7 @@
       grid-template-columns: auto 3fr 1fr 1fr 1fr;
 
       &__rank {
-        width: 30px;
+        width: 1.875rem; /* 30px */
       }
       &__nfts {
         display: block;
@@ -110,17 +110,17 @@
       grid-template-columns: auto 3fr 1fr 1fr 1fr;
 
       &__rank {
-        width: 30px;
-        height: 30px;
-        border-radius: 20px;
+        width: 1.875rem; /* 30px */
+        height: 1.875rem; /* 30px */
+        border-radius: 1.25rem; /* 20px */
         background-color: $bg-primary;
       }
       &__artist {
-        gap: 20px;
+        gap: 1.25rem; /* 20px */
 
         & img {
-          width: 60px;
-          height: 60px;
+          width: 3.75rem; /* 60px */
+          height: 3.75rem; /* 60px */
         }
       }
       &__nfts {
