--- a/src/components/organism/section/_BrowseCategoriesSection.scss
+++ b/src/components/organism/section/_BrowseCategoriesSection.scss
@@ -3,20 +3,20 @@
 
 .categories {
   display: grid;
-  gap: 40px;
-  padding: 40px 30px;
+  gap: 2.5rem; /* 40px */
+  padding: 2.5rem 1.875rem; /* 40px 30px */
   max-width: $screen-xl;
   margin: 0 auto;
 
   @media screen and (min-width: $screen-tablet) {
     & {
-      padding: 40px 72px;
+      padding: 2.5rem 4.5rem; /* 40px 72px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      gap: 60px;
-      padding: 80px 115px;
+      gap: 3.75rem; /* 60px */
+      padding: 5rem 7.1875rem; /* 80px 115px */
     }
   }
 }
