--- a/src/components/organism/section/_HeroSection.scss
+++ b/src/components/organism/section/_HeroSection.scss
@@ -3,14 +3,14 @@
 
 .hero {
   display: grid;
-  gap: 40px;
-  padding: 40px 30px;
+  gap: 2.5rem; /* 40px */
+  padding: 2.5rem 1.875rem; /* 40px 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
   &__info {
     display: grid;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
   &__title {
     text-transform: capitalize;
@@ -24,12 +24,12 @@
         'stats highlight';
       grid-template-columns: repeat(2, 1fr);
       align-items: start;
-      gap: 30px;
-      padding: 80px 72px;
+      gap: 1.875rem; /* 30px */
+      padding: 5rem 4.5rem; /* 80px 72px */
     }
     &__info {
       grid-area: info;
-      gap: 30px;
+      gap: 1.875rem; /* 30px */
     }
     &__title {
       @include text(h3);
@@ -47,10 +47,10 @@
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 80px 115px;
+      padding: 5rem 7.1875rem; /* 80px 115px */
     }
     &__info {
-      gap: 20px;
+      gap: 1.25rem; /* 20px */
     }
     &__title {
       @include text(h1);
