--- a/src/components/organism/section/_HighlightNFTSection.scss
+++ b/src/components/organism/section/_HighlightNFTSection.scss
@@ -10,14 +10,14 @@
   }
   &__content {
     display: grid;
-    gap: 30px;
-    padding: 120px 30px 40px 30px;
+    gap: 1.875rem; /* 30px */
+    padding: 7.5rem 1.875rem 2.5rem 1.875rem; /* 120px 30px 40px 30px */
     max-width: $screen-desktop;
     margin: 0 auto;
   }
   &__user {
-    padding: 10px 20px;
-    border-radius: 20px;
+    padding: 0.625rem 1.25rem; /* 10px 20px */
+    border-radius: 1.25rem; /* 20px */
     background: $bg-secondary;
     width: fit-content;
   }
@@ -33,7 +33,7 @@
         'title timer'
         'btn timer';
       align-items: end;
-      padding: 360px 80px 60px 80px;
+      padding: 22.5rem 5rem 3.75rem 5rem; /* 360px 80px 60px 80px */
     }
     &__timer {
       grid-area: timer;
@@ -44,7 +44,7 @@
   }
   @media screen and (min-width: $screen-lg) {
     &__content {
-      padding: 360px 115px 60px 115px;
+      padding: 22.5rem 7.1875rem 3.75rem 7.1875rem; /* 360px 115px 60px 115px */
     }
     &__title {
       @include text(h2);
