--- a/src/components/organism/section/_MoreFromArtistSection.scss
+++ b/src/components/organism/section/_MoreFromArtistSection.scss
@@ -3,16 +3,16 @@
 
 .moreartist__section {
   display: grid;
-  gap: 30px;
-  padding: 40px 30px;
+  gap: 1.875rem; /* 30px */
+  padding: 2.5rem 1.875rem; /* 40px 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
   @media screen and (min-width: $screen-tablet) {
     & {
       grid-template-columns: 1fr auto;
-      gap: 60px 100px;
-      padding: 40px 72px;
+      gap: 3.75rem 6.25rem; /* 60px 100px */
+      padding: 2.5rem 4.5rem; /* 40px 72px */
     }
     &__nfts {
       grid-column: -1 / 1;
@@ -24,7 +24,7 @@
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      padding: 80px 115px;
+      padding: 5rem 7.1875rem; /* 80px 115px */
     }
   }
 }
