--- a/src/components/organism/section/_NFTInfoSection.scss
+++ b/src/components/organism/section/_NFTInfoSection.scss
@@ -3,18 +3,18 @@
 
 .nft__section {
   display: grid;
-  gap: 20px;
-  padding: 40px 30px;
+  gap: 1.25rem; /* 20px */
+  padding: 2.5rem 1.875rem; /* 40px 30px */
   max-width: $screen-desktop;
   margin: 0 auto;
 
   &__cover {
     position: relative;
-    height: 320px;
+    height: 20rem; /* 320px */
   }
   &__info {
     display: grid;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
   }
   &__subhead {
     color: $color-gray;
@@ -25,11 +25,11 @@
   &__link {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem; /* 10px */
 
     & svg {
-      width: 24px;
-      height: 24px;
+      width: 1.5rem; /* 24px */
+      height: 1.5rem; /* 24px */
       color: $color-gray;
     }
   }
@@ -44,11 +44,11 @@
         'detail timer'
         'detail timer';
       align-items: start;
-      gap: 30px;
-      padding: 40px 72px;
+      gap: 1.875rem; /* 30px */
+      padding: 2.5rem 4.5rem; /* 40px 72px */
     }
     &__cover {
-      height: 420px;
+      height: 26.25rem; /* 420px */
     }
     &__title {
       @include text(h3);
@@ -56,16 +56,16 @@
     &__timer {
       grid-area: timer;
       position: sticky;
-      top: 40px;
+      top: 2.5rem; /* 40px */
     }
   }
   @media screen and (min-width: $screen-lg) {
     & {
-      gap: 30px 140px;
-      padding: 40px 115px;
+      gap: 1.875rem 8.75rem; /* 30px 140px */
+      padding: 2.5rem 7.1875rem; /* 40px 115px */
     }
     &__cover {
-      height: 560px;
+      height: 35rem; /* 560px */
     }
     &__title {
       @include text(h2);
@@ -81,8 +81,8 @@
     }
     &__link {
       & svg {
-        width: 32px;
-        height: 32px;
+        width: 2rem; /* 32px */
+        height: 2rem; /* 32px */
       }
     }
   }
